<resources>
    <string name="app_name">Intercross</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="cross_id">Cross ID:</string>
    <string name="save_text">Save</string>
    <string name="start_from">Manual start value</string>
    <string name="auto">Automatic (starts at 1)</string>
    <string name="pad_length">Padding Length</string>
    <string name="pad_length_hint">Total length of numeric identifier</string>
    <string name="number">Identifier Sequence</string>
    <string name="number_hint">Starting value for identifiers</string>
    <string name="suffix">Suffix</string>
    <string name="prefix">Prefix</string>
    <string name="cross_id_preview">Cross ID Preview</string>
    <string name="about_version_title">Version</string>
    <string name="about_title_other_apps">PhenoApps</string>
    <string name="about_project_lead_title">Project Lead</string>
    <string name="about_developer_title">Developer</string>
    <string name="about_developer_trife" translatable="false">Trevor Rife</string>
    <string name="about_developer_trife_location" translatable="false">Clemson University</string>
    <string name="about_developer_trife_email" translatable="false">twrife@clemson.edu</string>
    <string name="about_email_title">Email</string>
    <string name="about_developer_trife_website" translatable="false">https://github.com/PhenoApps/Field-Book</string>
    <string name="about_contributors_title">Contributors</string>
    <string name="about_contributors_developers_title">Developers</string>
    <string name="about_translators_title">Translators</string>
    <string name="about_translators_text" translatable="false">Irazema Fuentes-Bueno,  Sandra Dunckel,  Shuangye Wu,  Narinder Singh,  Daljit Singh,  Erena Edae,  Tatiana Danilova,  Rodrigo Pedrozo,  Cristiano Lemes da Silva,  Sophie Bouchet,  Hiroyoshi Iwata,  Goro Ishikawa,  Khaled El-Shamaa, Mokhlesur Rahman, Alice Brunazzi</string>
    <string name="about_contributors_funding_title">Funding</string>
    <string name="about_contributors_funding_text_first" translatable="false">Development of </string>
    <string name="about_contributors_funding_text_after" translatable="false"> has been supported by the Collaborative Crop Research Program of The McKnight Foundation, the National Science Foundation (#1543958), and the National Institute of Food and Agriculture (#2019-67021-29931).</string>
    <string name="about_rate">Rate this app</string>
    <string name="about_technical_title">Technical Details</string>
    <string name="about_github_title">GitHub</string>
    <string name="about_licenses_title">Licenses</string>
    <string name="about_help_translate_title">Help translate</string>
    <string name="changelog_title">Changelog</string>
    <string name="libraries_title">Libraries</string>
    <string name="parents">Parents</string>
    <string name="metaData">Metadata</string>
    <string name="Seeds">Seeds</string>
    <string name="Fruits">Fruits</string>
    <string name="Flowers">Flowers</string>
    <string name="UpdateMetaData">Update Metadata</string>
    <string name="error_value_exceeds_max">Value cannot exceed %d</string>
    <string name="navigate_to_wishlist">Navigate to wishlist</string>
    <string name="navigate_to_crossblock">Navigate to crossblock</string>
    <string name="Clear">Clear</string>
    <string name="New">New</string>
    <string name="SelectAllRows">Select all rows</string>
    <string name="Name">Name</string>
    <string name="Code">Code</string>
    <string name="PotentialMales">Potential Males</string>
    <string name="ErrorCodeExists">Code Exists</string>
    <string name="FemaleID">Female ID:</string>
    <string name="MaleID">Male ID:</string>
    <string name="search_with_barcode_scanner">Search with barcode scanner.</string>
    <string name="continuous_scan_and_submit">Continuous scan and submit.</string>
    <string name="test">TEST</string>
    <string name="import_a_zpl_file">Import a ZPL file</string>
    <string name="zpl_default" formatted="false">
        ^XA
        ^PW406
        ^LH10,10^FS
        ^FO0,0^A0,25,20^FD{crossId}^FS
        ^FO140,30^BQN,2,3,H^FDQA,{crossId}^FS
        ^FO140,170^A0,25,20^FD{date}^FS
        ^XZ
    </string>
    <string name="zpl_parameter_instructions" formatted="false">Use placeholders in raw ZPL. Intercross replaces them before printing.\n\nCross labels: {crossId}, {readableName}, {femaleId}, {maleId}, {date}, {timestamp}, {person}, {experiment}, {type}\nParent labels: {parentId}, {parentName}, {parentType}\n\nExisting ZPL that uses ^FN1-^FN6 still prints for compatibility.</string>
    <string name="select_template">Select Saved ZPL</string>
    <string name="select_zpl_template_title">Select ZPL</string>
    <string name="select_zpl_template_message">Please select ZPL for printing.</string>
    <string name="choose_bluetooth_device_title">Choose Bluetooth Printer Device</string>
    <string name="zpl_code_preview">ZPL Code Preview</string>
    <string name="import_zpl">Import ZPL</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all</string>
    <string name="print">Print</string>
    <string name="printing">Printing…</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="none">None</string>
    <string name="pattern">Pattern</string>
    <string name="uuid">UUID</string>
    <string name="male_parent">Male Parent</string>
    <string name="female_parent">Female Parent</string>
    <string name="crosses">Crosses</string>
    <string name="import_file">Import</string>
    <string name="parents_header_code_id">codeId</string>
    <string name="parents_header_readable_name">name</string>
    <string name="parents_header_sex">sex</string>
    <string name="wishlist_header_female_id">femaleDbId</string>
    <string name="wishlist_header_male_id">maleDbId</string>
    <string name="wishlist_header_female_name">femaleName</string>
    <string name="wishlist_header_male_name">maleName</string>
    <string name="wishlist_header_type">wishType</string>
    <string name="wishlist_header_min">wishMin</string>
    <string name="wishlist_header_max">wishMax</string>
    <string name="all_parents">All Parents</string>
    <string name="parental_navigation">Parents</string>
    <string name="parents_dont_exist">Parents do not exist in the DB</string>
    <string name="navigate_to_summary">Navigate to summary</string>
    <string name="add_female">Add Female</string>
    <string name="add_male_group">Add Male Group</string>
    <string name="add_male">Add Male</string>
    <string name="wishlist_is_empty">The wishlist is empty, import a wishlist first.</string>
    <string name="export">Export</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="summary_and_wishlist_empty">Summary and wishlist are empty.</string>
    <string name="parents_table_empty">Parents table is empty.</string>
    <string name="summary_empty">No crosses have been made.</string>
    <string name="parent_event_does_not_exist">Parent does not exist as a cross event.</string>
    <string name="parent_pollen_group_chip">Pollen group</string>
    <string name="go">Go</string>
    <string name="cancel">Cancel</string>
    <string name="qr_code_for_parent">QR Code for parent</string>
    <string name="button_to_scan_next_text">Button to scan next text entry.</string>
    <string name="button_to_create_wishlist">Button to create a new wishlist.</string>
    <string name="barcode_preview_image">Barcode preview image.</string>
    <string name="zxing_scan_mode_single">Single Mode</string>
    <string name="zxing_status_single">Single</string>
    <string name="zxing_scan_mode_search">Search Mode</string>
    <string name="zxing_scan_mode_continuous">Continuous Mode</string>
    <string name="choose_a_file_to_import">Choose a file to import.</string>
    <string name="choose_an_export_file_path">Choose an export file path.</string>
    <string name="exported_file_name">Exported file name.</string>
    <string name="default_crosses_export_file_name">crosses</string>
    <string name="default_database_export_file_name">intercross</string>
    <string name="default_database_backup_export_file_name">intercross_backup</string>
    <string name="ask_for_new_name">Enter a new file name</string>
    <string name="crosses_export_mom_header">femaleObsUnitDbId</string>
    <string name="crosses_export_dad_header">maleObsUnitDbId</string>
    <string name="crosses_export_mom_name_header">femaleName</string>
    <string name="crosses_export_dad_name_header">maleName</string>
    <string name="crosses_export_name_header">readableName</string>
    <string name="crosses_export_date_header">timestamp</string>
    <string name="crosses_export_person_header">person</string>
    <string name="crosses_export_experiment_header">experiment</string>
    <string name="crosses_export_type_header">type</string>
    <string name="preferences_brapi_oidc_flow_oauth_implicit">OAuth2 Implicit Grant</string>
    <string name="preferences_brapi_advanced_title">Advanced Auth Settings</string>
    <string name="preferences_brapi_version">BrAPI Version</string>
    <string name="preferences_brapi_version_v2">V2</string>
    <string name="preferences_brapi_oidc_flow">OIDC Flow</string>
    <string name="preferences_brapi_enable_title">Enable BrAPI</string>
    <string name="preferences_brapi_enable_summary">The Breeding API allows simple data transfer to compatible databases.</string>
    <string name="preferences_brapi_server_title">Server</string>
    <string name="brapi_base_url">Base URL</string>
    <string name="brapi_base_url_desc">The base URL for the connected BrAPI server</string>
    <string name="brapi_base_url_default" translatable="false">https://test-server.brapi.org</string>
    <string name="brapi_edit_display_name">Edit Display Name</string>
    <string name="brapi_edit_display_name_default">BrAPI Test Server</string>
    <string name="brapi_pagination">Page Size</string>
    <string name="brapi_timeout">Server Timeout</string>
    <string name="brapi_chunk_size">Chunk Size</string>
    <string name="brapi_max_concurrent_observation_transfer">Max Concurrent Observation Transfer</string>
    <string name="preferences_brapi_authorization_title">Authorization</string>
    <string name="brapi_oidc_url">OIDC Discovery URL</string>
    <string name="brapi_oidc_url_desc">The location of the OIDC Discovery JSON document</string>
    <string name="brapi_oidc_url_default" translatable="false">https://test-server.brapi.org/.well-known/openid-configuration</string>
    <string name="brapi_oidc_clientid">OIDC Client ID</string>
    <string name="brapi_oidc_clientid_desc">The Client Id to be used in the authentication provider</string>
    <string name="brapi_oidc_clientid_default" translatable="false">intercross</string>
    <string name="brapi_oidc_scope">OIDC Scope</string>
    <string name="brapi_oidc_scope_desc">The Scope to be used in the authentication provider</string>
    <string name="brapi_oidc_scope_default" translatable="false" />
    <string name="brapi_display_name">Display Name</string>
    <string name="brapi_revoke_auth">Log Out</string>
    <string name="menu_parents_delete_title">Delete selected parents.</string>
    <string name="menu_parents_print_title">Print selected parents.</string>
    <string name="dialog_save">Save</string>
    <string name="bottom_nv_home">Home</string>
    <string name="bottom_nv_summary">Graphs</string>
    <string name="bottom_nv_parents">Parents</string>
    <string name="bottom_nv_settings">Settings</string>
    <string name="Bulk">Bulk</string>
    <string name="sort_by">Sort by</string>
</resources>