<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/events_fragment"
        android:icon="@drawable/ic_home"
        android:title="@string/bottom_nv_home" />
    <item
        android:id="@+id/cross_tracker_fragment"
        android:icon="@drawable/ic_nv_crosses"
        android:title="@string/bottom_nv_crosses"/>
    <item
        android:id="@+id/parents_fragment"
        android:icon="@drawable/ic_nv_parents_tab"
        android:title="@string/bottom_nv_parents" />
    <item
        android:id="@+id/summary_fragment"
        android:icon="@drawable/ic_summarize_graph"
        android:title="@string/bottom_nv_summary"/>
    <item
        android:id="@+id/preferences_fragment"
        android:icon="@drawable/ic_nv_settings"
        android:title="@string/bottom_nv_settings" />
</menu>