<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout">

    <data>
        <import type="org.phenoapps.intercross.data.viewmodels.SettingsViewModel"/>

        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="SettingsViewModel" />

        <variable
            name="mode"
            type="int" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTextHolder"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEditText"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:visibility="visible"
                    android:selectAllOnFocus="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/codeTextHolder"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/Code"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/codeEditText"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:visibility="visible"
                    android:selectAllOnFocus="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:visibility="@{mode == 1 ? View.VISIBLE : View.GONE}"
                android:gravity="center_vertical">

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/bulkCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Bulk" />

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_account_tree_black_24dp"
                    android:contentDescription="@string/Bulk"
                    android:scaleType="centerInside" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/newButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@{mode == 0 ? @string/add_female : @string/add_male}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>